--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -31,6 +30,8 @@
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <link rel="stylesheet" href="./styles.css" />
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
